fixed logo not showing in firefox

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .nav-logo {
-  max-height: 1.875rem;
+  height: 1.875rem;
 }
 
 .breadcrumb > a:not(:first-child)::before {
